# AXYX

./: .gitignore  CITATION.cff  LICENSE  README.md  main.ipynb  pyproject.toml  pytest.ini  run_axyx.py  run_studio.bat  run_studio.py  run_viewer.bat  run_viewer.py
KILI/: ASSET_MANIFEST.yaml  README.md
benchmarks/: README.md  __init__.py  harness.py  m1_asset_pipeline.py  m2_avatar_skeleton.py  m3_bind_pose.py  m4_skinning.py  run_benchmarks.py  timing.py
config/: avatars.yaml  bone_constraints.yaml  coordinate_system.yaml  rendering.yaml  retarget_kili.yaml  retarget_metahuman.yaml  skeleton_definition.yaml  subject_cohorts.yaml  unreal_config.yaml
docs/: README.md  motion_database_design.md  overview.md  phase2_digital_twin.md
experiments/: README.md
metadata/: filter_report.txt
notebooks/: exploration.ipynb  visualization.ipynb
results/: README.md
scripts/: build_motion_catalog.py  export_summary.py  filter_subjects.py  inspect_dataset.py  inspect_subject.py  preprocess_kili_assets.py  preprocess_kili_lod.py  preprocess_kili_skeleton.py  preprocess_kili_textures.py  studio_component_harness.py  validate_dataset.py
tests/: conftest.py  test_animation.py  test_animation_clip.py  test_animation_sequence.py  test_architecture_freeze.py  test_avatar_kili.py  test_benchmark_harness.py  test_bone_geometry.py  test_camera.py  test_coordinate_converter.py  test_dependency_rules.py  test_exporter.py  test_frame_count.py  test_kili_skinning_diagnostics.py  test_loader.py  test_m1_benchmarks.py  test_models.py  test_parser.py  test_pipeline.py  test_renderer.py  (+12 more)
(+437 files in other folders)
